Get theme from localStorage and fixed body in dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  @apply bg-primary-005;
+  @apply bg-primary-005 dark:bg-dark-background
 }
 
 /* * {
